--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ dlldata.c
 
 # DNX
 project.lock.json
+project.fragment.lock.json
 artifacts/
 
 *_i.c
@@ -142,7 +143,8 @@ publish/
 *.azurePubxml
 # TODO: Comment the next line if you want to checkin your web deploy settings
 # but database connection strings (with potential passwords) will be unencrypted
-*.pubxml
+
+#*.pubxml
 *.publishproj
 
 # Microsoft Azure Web App publish settings. Comment the next line if you want to
@@ -188,6 +190,8 @@ ClientBin/
 *~
 *.dbmdl
 *.dbproj.schemaview
+
+*.jfm
 *.pfx
 *.publishsettings
 node_modules/
@@ -250,3 +254,11 @@ paket-files/
 # JetBrains Rider
 .idea/
 *.sln.iml
+
+
+# CodeRush
+.cr/
+
+# Python Tools for Visual Studio (PTVS)
+__pycache__/
+*.pyc
