--- a/SwaggerGenerator/SwaggerGenerator.csproj
+++ b/SwaggerGenerator/SwaggerGenerator.csproj
@@ -32,6 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="PowerArgs, Version=2.8.0.0, Culture=neutral, PublicKeyToken=26a276264bbd55b8, processorArchitecture=MSIL">
+      <HintPath>..\packages\PowerArgs.2.8.0.0\lib\net45\PowerArgs.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,11 +48,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions\InitializeSwagger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Swagger\Contact.cs" />
+    <Compile Include="Swagger\ExternalDocumentation.cs" />
+    <Compile Include="Swagger\Header.cs" />
+    <Compile Include="Swagger\License.cs" />
+    <Compile Include="Swagger\Operation.cs" />
+    <Compile Include="Swagger\Parameter.cs" />
+    <Compile Include="Swagger\Path.cs" />
+    <Compile Include="Swagger\Response.cs" />
+    <Compile Include="Swagger\Schema.cs" />
+    <Compile Include="Swagger\SecurityDefinition.cs" />
+    <Compile Include="Swagger\SwaggerDefinition.cs" />
+    <Compile Include="Swagger\SwaggerInfo.cs" />
+    <Compile Include="Swagger\Tag.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
